improve CSS Design

--- a/google.css
+++ b/google.css
@@ -10,17 +10,16 @@ a:hover {
   color: #3c4043;
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 nav {
-  /* background-color: honeydew; */
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
   height: 7vh;
   font-size: small;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 nav > ul {
@@ -30,11 +29,9 @@ nav > ul {
 }
 nav > ul > li {
   padding-right: 2rem;
-  /* color: rgba(255, 0, 0, 0.87); */
 }
 
 form {
-  /* background-color: lightgoldenrodyellow; */
   height: 70vh;
   display: flex;
   flex-direction: column;
@@ -43,37 +40,54 @@ form {
   gap: 1.5rem;
 }
 
-.btn {
-  /* background-color: red; */
+.btn-cont {
   width: 46vw;
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 0.5rem;
 }
-input {
-  /* background-color: blue; */
+.btn {
   background-color: #f8f9fa;
   border: 1px solid #f8f9fa;
   border-radius: 4px;
-  font-family: arial, sans-serif;
-  font-size: 0.875rem;
-  padding: 0 1rem;
-  line-height: 27px;
-  height: 2.3rem;
-  min-width: 54px;
-  text-align: center;
+  color: #3c4043;
   cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  height: 36px;
+  line-height: 27px;
+  min-width: 54px;
+  padding: 0 16px;
+  text-align: center;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: pre;
 }
 
-.input {
+.btn:hover {
+  border-color: #dadce0;
+  box-shadow: rgba(39, 39, 39, 0.1) 0 1px 1px;
+  color: #202124;
+}
+
+.btn:focus {
+  border-color: #4285f4;
+  outline: none;
+}
+
+.search-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   text-align: left;
   background-color: white;
   border: none;
   border-radius: calc(0.5 * 44px);
   color: black;
   font-size: inherit;
-  outline: 0;
   padding-inline-end: 50px;
   padding-inline-start: 52px;
   position: relative;
@@ -82,8 +96,24 @@ input {
   width: 35rem;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+form > div > i {
+  color: #cfcbcf;
+  width: 38.3rem;
+  display: flex;
+  justify-content: right;
+  position: absolute;
+}
+.input {
+  height: 3rem;
+  width: 35rem;
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  font-size: inherit;
+  outline: 0;
+}
 
-img {
+form > img {
   width: 272px;
   height: 92px;
 }
